--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.3'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     implementation("aws.sdk.kotlin:s3:0.17.5-beta")
+    implementation("com.amazonaws:aws-android-sdk-s3:2.17.1")
 
 }
